--- a/stuff-in-the-pocket.html
+++ b/stuff-in-the-pocket.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>anna leite</title>
-    <link rel="stylesheet" href="index.css" type="text/css">
+    <link rel="stylesheet" href="stuff-in-the-pocket.css" type="text/css">
 </head>
 <body>
-
     <header>
         <div class="nav-header">
             <nav>
@@ -23,10 +22,17 @@
     </header>
 
     <main>
-        <h1>anna leite</h1>
-        <p>phrase d'accroche je suis cool ect</p>
-        <img src="" alt="fond">
+        <div class="liens-externes">
+            <h2>to see more me and my projects</h2>
+            <a href="https://github.com/anna-leite">github</a>
+            <a href="https://www.linkedin.com/in/anna-leite-092649339/">linkedin</a>
+        </div>
 
+        <div class="contact">
+            <h2>to discuss with me</h2>
+            <a href="anna.leite@laplateforme.io">email</a>
+        </div>
+        
     </main>
     
 </body>
