--- a/what-i-do.html
+++ b/what-i-do.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>anna leite</title>
-    <link rel="stylesheet" href="index.css" type="text/css">
+    <link rel="stylesheet" href="what-i-do.css" type="text/css">
 </head>
 <body>
-
     <header>
         <div class="nav-header">
             <nav>
@@ -23,10 +22,9 @@
     </header>
 
     <main>
-        <h1>anna leite</h1>
-        <p>phrase d'accroche je suis cool ect</p>
-        <img src="" alt="fond">
-
+        <a href="indochine">indochine</a>
+        <a href="bloompétals">bloompétals</a>
+        
     </main>
     
 </body>
