--- a/who-i-am.html
+++ b/who-i-am.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>anna leite</title>
-    <link rel="stylesheet" href="index.css" type="text/css">
+    <link rel="stylesheet" href="who-i-am.css" type="text/css">
 </head>
 <body>
-
     <header>
         <div class="nav-header">
             <nav>
@@ -23,9 +22,20 @@
     </header>
 
     <main>
-        <h1>anna leite</h1>
-        <p>phrase d'accroche je suis cool ect</p>
-        <img src="" alt="fond">
+        <p>
+            i studied and practice art for long years  
+            now i learn dev in la plateforme
+            i live and work in marseille.
+            je cherche une alternace 
+        </p>
+
+        <p>
+            soft skills
+        </p>
+
+        <p>
+            envies/rêves
+        </p>
 
     </main>
     
