my-awesome-portfolio

--- a/index.html
+++ b/index.html
@@ -6,26 +6,25 @@
     <title>anna leite</title>
     <link rel="stylesheet" href="index.css" type="text/css">
 </head>
-<body>
+<body class="background">
 
-    <header>
-        <div class="nav-header">
+    <main>
+
+        <h1>anna leite.</h1>
+
+        <p class="titre">software engineer</p>
+        <!--<p>i love make elegant, clear and efficient software</p>-->
+
+        <div class="navigation">
             <nav>
                 <ul>
                     <li><a href="index.html">§</a></li>
-                    <li><a href="who i am.html">who i am</a></li>
+                    <li><a href="who-i-am.html">who i am</a></li>                        
                     <li><a href="what-i-do.html">what i do</a></li>
-                    <li><a href="contact.html">let's talk</a></li>
-                    <li><a href="stuff-in-the-pocket">stuff in the pocket</a></li>
+                    <li><a href="stuff-in-the-pocket.html">stuff in the pocket</a></li>
                 </ul>
             </nav>
         </div>
-    </header>
-
-    <main>
-        <h1>anna leite</h1>
-        <p>phrase d'accroche je suis cool ect</p>
-        <img src="" alt="fond">
 
     </main>
     
