--- a/proj-bloompetals.html
+++ b/proj-bloompetals.html
@@ -4,19 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>anna leite</title>
-    <link rel="stylesheet" href="proj.css" type="text/css">
+    <link rel="stylesheet" href="index.css" type="text/css">
 </head>
-<body>
-    <h3>Bloompétals, site commerciale</h3>
-    <p>présentaiuon projet
-        html css 
-        porjet personnelle dans le cadre de la formation à la plateforme 
-        contrainte image, page, texte, menu, page contact
+<body class="background">
+    <main>
+        <h1>anna leite.</h1>
 
-    </p>
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
-    
+        <p class="titre">software engineer</p>
+
+        <h3>Bloompétals, site commerciale</h3>
+
+        <p>présentaiuon projet
+            html css 
+            porjet personnelle dans le cadre de la formation à la plateforme 
+            contrainte image, page, texte, menu, page contact
+        </p>
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+
+        <div class="navigation">
+            <nav>
+                <ul>
+                    <li><a href="index.html">§</a></li>
+                    <li><a href="who-i-am.html">who i am</a></li>                        
+                    <li><a href="what-i-do.html">what i do</a></li>
+                    <li><a href="stuff-in-the-pocket.html">stuff in the pocket</a></li>
+                </ul>
+            </nav>
+        </div>
+    </main>    
 </body>
 </html>
