--- a/stuff-in-the-pocket.html
+++ b/stuff-in-the-pocket.html
@@ -6,21 +6,7 @@
     <title>anna leite</title>
     <link rel="stylesheet" href="stuff-in-the-pocket.css" type="text/css">
 </head>
-<body>
-    <header>
-        <div class="nav-header">
-            <nav>
-                <ul>
-                    <li><a href="index.html">§</a></li>
-                    <li><a href="who i am.html">who i am</a></li>
-                    <li><a href="what-i-do.html">what i do</a></li>
-                    <li><a href="contact.html">let's talk</a></li>
-                    <li><a href="stuff-in-the-pocket">stuff in the pocket</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
+<body class="background">
     <main>
         <div class="liens-externes">
             <h2>to see more me and my projects</h2>
@@ -32,7 +18,18 @@
             <h2>to discuss with me</h2>
             <a href="anna.leite@laplateforme.io">email</a>
         </div>
-        
+
+        <div class="navigation">
+            <nav>
+                <ul>
+                    <li><a href="index.html">§</a></li>
+                    <li><a href="who i am.html">who i am</a></li>
+                    <li><a href="what-i-do.html">what i do</a></li>
+                    <li><a href="contact.html">let's talk</a></li>
+                    <li><a href="stuff-in-the-pocket.html">stuff in the pocket</a></li>
+                </ul>
+            </nav>
+        </div>
     </main>
     
 </body>
