--- a/what-i-do.html
+++ b/what-i-do.html
@@ -6,25 +6,28 @@
     <title>anna leite</title>
     <link rel="stylesheet" href="what-i-do.css" type="text/css">
 </head>
-<body>
-    <header>
-        <div class="nav-header">
+<body class="background">
+    <main>
+        <h1>anna leite.</h1>
+
+        <p class="titre">software engineer</p>
+
+        <div class="nav-projects">
+            <a href="indochine">indochine</a>
+            <a href="bloompétals">bloompétals</a>
+        </div>
+
+        <div class="navigation">
             <nav>
                 <ul>
                     <li><a href="index.html">§</a></li>
                     <li><a href="who i am.html">who i am</a></li>
                     <li><a href="what-i-do.html">what i do</a></li>
                     <li><a href="contact.html">let's talk</a></li>
-                    <li><a href="stuff-in-the-pocket">stuff in the pocket</a></li>
+                    <li><a href="stuff-in-the-pocket.html">stuff in the pocket</a></li>
                 </ul>
             </nav>
         </div>
-    </header>
-
-    <main>
-        <a href="indochine">indochine</a>
-        <a href="bloompétals">bloompétals</a>
-        
     </main>
     
 </body>
