--- a/who-i-am.html
+++ b/who-i-am.html
@@ -6,22 +6,10 @@
     <title>anna leite</title>
     <link rel="stylesheet" href="who-i-am.css" type="text/css">
 </head>
-<body>
-    <header>
-        <div class="nav-header">
-            <nav>
-                <ul>
-                    <li><a href="index.html">§</a></li>
-                    <li><a href="who i am.html">who i am</a></li>
-                    <li><a href="what-i-do.html">what i do</a></li>
-                    <li><a href="contact.html">let's talk</a></li>
-                    <li><a href="stuff-in-the-pocket">stuff in the pocket</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
+<body class="background">
     <main>
+        <h1>anna leite.</h1>
+        <p class="titre">software engineer</p>
         <p>
             i studied and practice art for long years  
             now i learn dev in la plateforme
@@ -37,6 +25,17 @@
             envies/rêves
         </p>
 
+        <div class="navigation">
+            <nav>
+                <ul>
+                    <li><a href="index.html">§</a></li>
+                    <li><a href="who i am.html">who i am</a></li>
+                    <li><a href="what-i-do.html">what i do</a></li>
+                    <li><a href="contact.html">let's talk</a></li>
+                    <li><a href="stuff-in-the-pocket.html">stuff in the pocket</a></li>
+                </ul>
+            </nav>
+        </div>
     </main>
     
 </body>
