--- a/proj-bloompetals.html
+++ b/proj-bloompetals.html
@@ -19,9 +19,9 @@
             porjet personnelle dans le cadre de la formation à la plateforme 
             contrainte image, page, texte, menu, page contact
         </p>
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+        <img src="images/bloompétals/bloompétal visuel 2.png" alt="site">
+        <img src="images/bloompétals/bloompétal visuel 3.png" alt="site">
+        <img src="images/bloompétals/bloompétal visuel 4.png" alt="site">
 
         <div class="navigation">
             <nav>
