--- a/proj-indochine.html
+++ b/proj-indochine.html
@@ -24,9 +24,9 @@
         </p>
     
     
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+        <img src="images/indochine/site indo responsive 1.png" alt="site">
+        <img src="images/indochine/site indo responsive 2.png" alt="site">
+        <img src="images/indochine/site indo visuel.png" alt="site">
 
         <div class="navigation">
             <nav>
