--- a/stuff-in-the-pocket.html
+++ b/stuff-in-the-pocket.html
@@ -8,8 +8,12 @@
 </head>
 <body class="background">
     <main>
+        <h1>anna leite.</h1>
+
+        <p class="titre">software engineer</p>
+
         <div class="liens-externes">
-            <h2>to see more me and my projects</h2>
+            <h2>to see more on me and my projects</h2>
             <a href="https://github.com/anna-leite">github</a>
             <a href="https://www.linkedin.com/in/anna-leite-092649339/">linkedin</a>
         </div>
@@ -25,7 +29,6 @@
                     <li><a href="index.html">§</a></li>
                     <li><a href="who i am.html">who i am</a></li>
                     <li><a href="what-i-do.html">what i do</a></li>
-                    <li><a href="contact.html">let's talk</a></li>
                     <li><a href="stuff-in-the-pocket.html">stuff in the pocket</a></li>
                 </ul>
             </nav>
