--- a/what-i-do.html
+++ b/what-i-do.html
@@ -13,17 +13,18 @@
         <p class="titre">software engineer</p>
 
         <div class="nav-projects">
-            <a href="indochine">indochine</a>
-            <a href="bloompétals">bloompétals</a>
+                <a href="indochine">indochine</a>
+                <a href="bloompétals">bloompétals</a>
+            </div>
+
         </div>
 
         <div class="navigation">
             <nav>
                 <ul>
                     <li><a href="index.html">§</a></li>
-                    <li><a href="who i am.html">who i am</a></li>
+                    <li><a href="who-i-am.html">who i am</a></li>
                     <li><a href="what-i-do.html">what i do</a></li>
-                    <li><a href="contact.html">let's talk</a></li>
                     <li><a href="stuff-in-the-pocket.html">stuff in the pocket</a></li>
                 </ul>
             </nav>
