--- a/what-i-do.html
+++ b/what-i-do.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>anna leite</title>
     <link rel="stylesheet" href="what-i-do.css" type="text/css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    
 </head>
 <body class="background">
     <main>
@@ -30,6 +32,6 @@
             </nav>
         </div>
     </main>
-    
+    <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
